--- a/hail/python/requirements.txt
+++ b/hail/python/requirements.txt
@@ -2,6 +2,8 @@ aiohttp==3.7.4
 aiohttp_session>=2.7,<2.8
 asyncinit>=0.2.4,<0.3
 bokeh>1.3,<2.0
+boto3>=1.17,<2.0
+botocore>=1.20,<2.0
 decorator<5
 Deprecated>=1.2.10,<1.3
 dill>=0.3.1.1,<0.4
@@ -11,6 +13,7 @@ gcsfs==0.8.0
 fsspec==0.9.0
 humanize==1.0.0
 hurry.filesize==0.9
+janus>=0.6,<0.7
 nest_asyncio
 numpy<2
 pandas>=1.1.0,<1.1.5
@@ -18,7 +21,7 @@ parsimonious<0.9
 PyJWT
 pyspark>=3.1.1,<3.2.0
 python-json-logger==0.1.11
-requests==2.22.0
+requests==2.25.1
 scipy>1.2,<1.7
 tabulate==0.8.3
 tqdm==4.42.1
