--- a/batch/Makefile
+++ b/batch/Makefile
@@ -1,10 +1,9 @@
 include ../config.mk
 
-BATCH_LATEST = $(DOCKER_PREFIX)/batch:latest
-BATCH_IMAGE = $(DOCKER_PREFIX)/batch:$(shell docker images -q --no-trunc batch | sed -e 's,[^:]*:,,')
+TOKEN = $(shell cat /dev/urandom | LC_ALL=C tr -dc 'a-z0-9' | head -c 12)
 
-BATCH_WORKER_LATEST = $(DOCKER_PREFIX)/batch-worker:latest
-BATCH_WORKER_IMAGE = $(DOCKER_PREFIX)/batch-worker:$(shell docker images -q --no-trunc batch-worker | sed -e 's,[^:]*:,,')
+BATCH_IMAGE := $(DOCKER_PREFIX)/batch:$(TOKEN)
+BATCH_WORKER_IMAGE := $(DOCKER_PREFIX)/batch-worker:$(TOKEN)
 
 EXTRA_PYTHONPATH := ../hail/python:../gear:../web_common
 PYTHON := PYTHONPATH=$${PYTHONPATH:+$${PYTHONPATH}:}$(EXTRA_PYTHONPATH) python3
@@ -16,40 +15,26 @@ check:
 	curlylint .
 	bash ../check-sql.sh
 
-.PHONY: build-prereqs
-build-prereqs:
-	$(MAKE) -C ../docker build
-
 .PHONY: build-batch
-build-batch: build-prereqs
-	-docker pull $(BATCH_LATEST)
-	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"service-base"}}' Dockerfile Dockerfile.out
-	docker build -t batch -f Dockerfile.out --cache-from batch,$(BATCH_LATEST),service-base .
+build-batch:
+	$(MAKE) -C ../docker service-base
+	rm -rf Dockerfile.out && mkdir -p Dockerfile.out
+	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"'$$(cat ../docker/service-base)'"}}' Dockerfile Dockerfile.out/Dockerfile
+	../docker-build.sh . Dockerfile.out $(BATCH_IMAGE)
 
 .PHONY: build-worker
-build-worker: build-prereqs
-	-docker pull $(BATCH_WORKER_LATEST)
-	python3 ../ci/jinja2_render.py '{"global":{"docker_prefix":"$(DOCKER_PREFIX)"}}' Dockerfile.worker Dockerfile.worker.out
-	docker build -t batch-worker -f Dockerfile.worker.out --cache-from batch-worker,$(BATCH_WORKER_LATEST),service-base ..
+build-worker: src/main/java/is/hail/JVMEntryway.class jars/junixsocket-selftest-2.3.3-jar-with-dependencies.jar
+	rm -rf Dockerfile.worker.out && mkdir -p Dockerfile.worker.out
+	python3 ../ci/jinja2_render.py '{"global":{"docker_prefix":"$(DOCKER_PREFIX)"}}' Dockerfile.worker Dockerfile.worker.out/Dockerfile
+	../docker-build.sh .. batch/Dockerfile.worker.out $(BATCH_WORKER_IMAGE)
 
 .PHONY: build
 build: build-batch build-worker
 
-.PHONY: push
-push: build
-	docker tag batch $(BATCH_LATEST)
-	docker push $(BATCH_LATEST)
-	docker tag batch $(BATCH_IMAGE)
-	docker push $(BATCH_IMAGE)
-	docker tag batch-worker $(BATCH_WORKER_LATEST)
-	docker push $(BATCH_WORKER_LATEST)
-	docker tag batch-worker $(BATCH_WORKER_IMAGE)
-	docker push $(BATCH_WORKER_IMAGE)
-
 JINJA_ENVIRONMENT = '{"code":{"sha":"$(shell git rev-parse --short=12 HEAD)"},"deploy":$(DEPLOY),"batch_image":{"image":"$(BATCH_IMAGE)"},"batch_worker_image":{"image":"$(BATCH_WORKER_IMAGE)"},"default_ns":{"name":"$(NAMESPACE)"},"batch_database":{"user_secret_name":"sql-batch-user-config"},"global":{"project":"$(PROJECT)","domain":"$(DOMAIN)","k8s_server_url":"$(KUBERNETES_SERVER_URL)","docker_prefix":"$(DOCKER_PREFIX)","docker_root_image":"$(DOCKER_ROOT_IMAGE)"},"scope":"$(SCOPE)"}'
 
 .PHONY: deploy
-deploy: push
+deploy: build
 	! [ -z $(NAMESPACE) ]  # call this like: make deploy NAMESPACE=default
 	E=$(JINJA_ENVIRONMENT) && \
 	  python3 ../ci/jinja2_render.py $$E deployment.yaml deployment.yaml.out && \
