--- a/ci/Dockerfile.ci-utils
+++ b/ci/Dockerfile.ci-utils
@@ -1,5 +1,12 @@
 FROM {{ service_base_image.image }}
 
+# source: https://cloud.google.com/storage/docs/gsutil_install#linux
+RUN curl -sSLO https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-334.0.0-linux-x86_64.tar.gz && \
+    tar -xf google-cloud-sdk-334.0.0-linux-x86_64.tar.gz && \
+    curl -sSLO https://dl.k8s.io/release/v1.19.7/bin/linux/amd64/kubectl && \
+    install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+ENV PATH $PATH:/google-cloud-sdk/bin
+RUN gcloud version && kubectl version --client=true
 RUN hail-pip-install twine
 COPY jinja2_render.py .
 COPY wait-for.py .
