--- a/build.yaml
+++ b/build.yaml
@@ -892,8 +892,7 @@ steps:
       - hail_repl_image
   - kind: runImage
     name: upload_test_resources_to_gcs
-    image:
-      valueFrom: base_image.image
+    image: gcr.io/google.com/cloudsdktool/cloud-sdk:334.0.0
     script: |
       set -ex
       cd /io/repo/hail/
@@ -912,7 +911,6 @@ steps:
         to: /io/repo/hail/python/hail/docs/data
     dependsOn:
       - default_ns
-      - base_image
       - merge_code
   - kind: runImage
     name: test_hail_java_0
@@ -2432,8 +2430,7 @@ steps:
       - create_certs
   - kind: runImage
     name: upload_query_jar
-    image:
-      valueFrom: base_image.image
+    image: gcr.io/google.com/cloudsdktool/cloud-sdk:334.0.0
     script: |
       set -ex
       gcloud -q auth activate-service-account --key-file=/query-gsa-key/key.json
@@ -2461,7 +2458,6 @@ steps:
         to: /io/git_version
     dependsOn:
       - default_ns
-      - base_image
       - build_hail_jar_only
       - merge_code
       - create_test_gsa_keys
@@ -3439,6 +3435,7 @@ steps:
       - test_ci
   - kind: runImage
     name: deploy_hail
+    image: gcr.io/google.com/cloudsdktool/cloud-sdk:334.0.0
     script: |
       set -ex
       gcloud auth activate-service-account --key-file=/secrets/ci-deploy-0-1--hail-is-hail.json
@@ -3451,8 +3448,6 @@ steps:
       GS_HAIL_ZIP=gs://hail-common/builds/${BRANCH}/python/hail-${BRANCH}-${SHA}.zip
       gsutil cp /io/hail.zip ${GS_HAIL_ZIP}
       gsutil acl set public-read ${GS_HAIL_ZIP}
-    image:
-      valueFrom: base_image.image
     secrets:
       - name: ci-deploy-0-1--hail-is-hail
         namespace:
@@ -3467,7 +3462,6 @@ steps:
       - deploy
     dependsOn:
       - default_ns
-      - base_image
       - build_hail
   - kind: buildImage2
     name: blog_nginx_image
@@ -3830,7 +3824,7 @@ steps:
   - kind: runImage
     name: delete_batch_instances
     image:
-      valueFrom: base_image.image
+      valueFrom: ci_utils_image.image
     alwaysRun: true
     script: |
       set -ex
@@ -3856,7 +3850,7 @@ steps:
       - test
     dependsOn:
       - default_ns
-      - base_image
+      - ci_utils_image
       - test_batch_invariants
       - test_batch_0
       - test_batch_1
