--- a/tls/Dockerfile
+++ b/tls/Dockerfile
@@ -1,4 +1,4 @@
-FROM {{ service_base_image.image }}
+FROM {{ ci_utils_image.image }}
 
 # re: RANDFILE, https://github.com/openssl/openssl/issues/7754#issuecomment-444063355
 RUN hail-apt-get-install openssl && \
