--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -111,7 +111,7 @@ steps:
       - from: /repo/ci/test/resources
         to: /io/ci/test/resources
     dependsOn:
-      - service_base_image
+      - ci_utils_image
       - merge_code
   - kind: runImage
     name: create_certs
