--- a/letsencrypt/Makefile
+++ b/letsencrypt/Makefile
@@ -1,25 +1,19 @@
 include ../config.mk
 
-LETSENCRYPT_LATEST = $(DOCKER_PREFIX)/letsencrypt:latest
-LETSENCRYPT_IMAGE = $(DOCKER_PREFIX)/letsencrypt:$(shell docker images -q --no-trunc letsencrypt | sed -e 's,[^:]*:,,')
+TOKEN = $(shell cat /dev/urandom | LC_ALL=C tr -dc 'a-z0-9' | head -c 12)
 
-.PHONY: build push start-service run clean
+LETSENCRYPT_IMAGE := $(DOCKER_PREFIX)/letsencrypt:$(TOKEN)
+
+.PHONY: build start-service run clean
 
 build:
-	docker build -f Dockerfile -t letsencrypt --cache-from letsencrypt,$(LETSENCRYPT_LATEST) .
-
-.PHONY: push
-push: build
-	docker tag letsencrypt $(LETSENCRYPT_LATEST)
-	docker push $(LETSENCRYPT_LATEST)
-	docker tag letsencrypt $(LETSENCRYPT_IMAGE)
-	docker push $(LETSENCRYPT_IMAGE)
+	../docker-build.sh . Dockerfile $(LETSENCRYPT_IMAGE)
 
 start-service:
 	kubectl -n default apply -f service.yaml
 
 DRY_RUN ?= false
-run: push
+run: build
 	echo $(DOMAIN) > domains.txt.out
 	echo internal.$(DOMAIN) >> domains.txt.out
 	sed 's/$$/.$(DOMAIN)/g' subdomains.txt >> domains.txt.out
