--- a/auth/Makefile
+++ b/auth/Makefile
@@ -1,7 +1,8 @@
 include ../config.mk
 
-AUTH_LATEST = $(DOCKER_PREFIX)/auth:latest
-AUTH_IMAGE = $(DOCKER_PREFIX)/auth:$(shell docker images -q --no-trunc auth:latest | sed -e 's,[^:]*:,,')
+TOKEN = $(shell cat /dev/urandom | LC_ALL=C tr -dc 'a-z0-9' | head -c 12)
+
+AUTH_IMAGE := $(DOCKER_PREFIX)/auth:$(TOKEN)
 
 EXTRA_PYTHONPATH := ../hail/python:../gear:../web_common
 PYTHON := PYTHONPATH=$${PYTHONPATH:+$${PYTHONPATH}:}$(EXTRA_PYTHONPATH) python3
@@ -15,20 +16,12 @@ check:
 
 .PHONY: build
 build:
-	$(MAKE) -C ../docker build
-	-docker pull $(AUTH_LATEST)
-	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"service-base"}}' Dockerfile Dockerfile.out
-	docker build -f Dockerfile.out -t auth --cache-from auth,$(AUTH_LATEST),base ..
-
-.PHONY: push
-push: build
-	docker tag auth $(AUTH_LATEST)
-	docker push $(AUTH_LATEST)
-	docker tag auth $(AUTH_IMAGE)
-	docker push $(AUTH_IMAGE)
+	$(MAKE) -C ../docker service-base
+	python3 ../ci/jinja2_render.py '{"service_base_image":{"image":"'$$(cat ../docker/service-base)'"}}' Dockerfile Dockerfile.out
+	../docker-build.sh .. auth/Dockerfile.out $(AUTH_IMAGE)
 
 .PHONY: deploy
-deploy: push
+deploy: build
 	! [ -z $(NAMESPACE) ]  # call this like: make deploy NAMESPACE=default
 	kubectl -n $(NAMESPACE) apply -f auth-driver-service-account.yaml
 	python3 ../ci/jinja2_render.py '{"code":{"sha":"$(shell git rev-parse --short=12 HEAD)"},"deploy":$(DEPLOY),"default_ns":{"name":"$(NAMESPACE)"},"auth_image":{"image":"$(AUTH_IMAGE)"},"auth_database":{"user_secret_name":"sql-auth-user-config"},"global":{"project":"$(PROJECT)","zone":"$(ZONE)","domain":"$(DOMAIN)"}}' deployment.yaml deployment.yaml.out
