--- a/docker/Makefile
+++ b/docker/Makefile
@@ -14,14 +14,12 @@ GENETICS_PUBLIC_IMAGE := $(DOCKER_PREFIX)/genetics-public:$(TOKEN)
 
 hail-ubuntu: hail-ubuntu-stmp
 hail-ubuntu-stmp: hail-ubuntu/Dockerfile hail-ubuntu/hail-pip-install hail-ubuntu/pip.conf hail-ubuntu/hail-apt-get-install
-	mkdir -p hail-ubuntu/Dockerfile.out
-	python3 ../ci/jinja2_render.py '{"global":{"docker_prefix":"$(DOCKER_PREFIX)"}}' hail-ubuntu/Dockerfile hail-ubuntu/Dockerfile.out/Dockerfile
+	python3 ../ci/jinja2_render.py '{"global":{"docker_prefix":"$(DOCKER_PREFIX)"}}' hail-ubuntu/Dockerfile hail-ubuntu/Dockerfile.out
 	../docker-build.sh hail-ubuntu Dockerfile.out $(HAIL_UBUNTU_IMAGE)
 	echo $(HAIL_UBUNTU_IMAGE) > hail-ubuntu-stmp
 
 base: hail-ubuntu-stmp Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
-	mkdir -p Dockerfile.base.out
-	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.base Dockerfile.base.out/Dockerfile
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.base Dockerfile.base.out
 	../docker-build.sh .. docker/Dockerfile.base.out $(BASE_IMAGE)
 	echo $(BASE_IMAGE) > base
 
@@ -32,15 +30,13 @@ hail_version:
 
 .PHONY: service-base
 service-base: base hail_version
-	mkdir -p Dockerfile.service-base.out
-	python3 ../ci/jinja2_render.py '{"base_image":{"image":"'$$(cat base)'"}}' Dockerfile.service-base Dockerfile.service-base.out/Dockerfile
+	python3 ../ci/jinja2_render.py '{"base_image":{"image":"'$$(cat base)'"}}' Dockerfile.service-base Dockerfile.service-base.out
 	../docker-build.sh .. docker/Dockerfile.service-base.out $(SERVICE_BASE_IMAGE)
 	echo $(SERVICE_BASE_IMAGE) > service-base
 
 .PHONY: service-java-run-base
 service-java-run-base: hail-ubuntu-stmp hail_version
-	mkdir -p Dockerfile.service-java-run-base.out
-	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.service-java-run-base Dockerfile.service-java-run-base.out/Dockerfile
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"'$$(cat hail-ubuntu-stmp)'"}}' Dockerfile.service-java-run-base Dockerfile.service-java-run-base.out
 	../docker-build.sh .. docker/Dockerfile.service-java-run-base.out $(SERVICE_JAVA_RUN_BASE_IMAGE)
 	echo $(SERVICE_JAVA_RUN_BASE_IMAGE) > service-java-run-base
 
@@ -53,5 +49,5 @@ clean:
 
 ## Public Images ###############################################################
 
-publish-public-images:
+publish-public-images: hail-ubuntu-stmp
 	bash publish-public-images.sh $(DOCKER_PREFIX)
