--- a/ci/test/resources/build.yaml
+++ b/ci/test/resources/build.yaml
@@ -103,17 +103,6 @@ steps:
       - from: /repo
         to: /io/repo
   - kind: buildImage2
-    name: ci_utils_image
-    dockerFile: /io/ci/Dockerfile.ci-utils
-    contextPath: /io/ci
-    publishAs: ci-utils
-    inputs:
-      - from: /repo/ci
-        to: /io/ci
-    dependsOn:
-      - service_base_image
-      - merge_code
-  - kind: buildImage2
     name: create_certs_image
     dockerFile: /io/ci/test/resources/Dockerfile.certs
     contextPath: /io/ci/test/resources
@@ -122,7 +111,7 @@ steps:
       - from: /repo/ci/test/resources
         to: /io/ci/test/resources
     dependsOn:
-      - ci_utils_image
+      - hail_ubuntu_image
       - merge_code
   - kind: runImage
     name: create_certs
